k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend-service
          image: ghcr.io/kitiphol/toktik-frontend:latest
          ports:
            - containerPort: 3000
          # env:
          #   - name: NODE_ENV
          #     value: "production"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
