k8s/video-chunker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-chunker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-chunker
  template:
    metadata:
      labels:
        app: video-chunker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: video-chunker
          image: ghcr.io/kitiphol/videochunker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: machinery-config
              mountPath: ./machinery.yaml
              subPath: machinery.yaml
      volumes:
        - name: machinery-config
          configMap:
            name: machinery-config
---
apiVersion: v1
kind: Service
metadata:
  name: video-chunker
spec:
  selector:
    app: video-chunker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
