k8s/websocket-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: websocket-server
          image: ghcr.io/kitiphol/websocketserver:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
  namespace: default
spec:
  selector:
    app: websocket-server
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
